{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Controller",
            "id": "65b11656-2bef-4eb9-9749-a3b08afc44cd",
            "actions": [
                {
                    "name": "Stick_L",
                    "type": "Value",
                    "id": "0187836e-bde0-4512-a8db-d1edf0517ea2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Stick_R",
                    "type": "Value",
                    "id": "ecd2dfa4-fe64-43c6-b25e-c75a6a2be2c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger_L",
                    "type": "Button",
                    "id": "fee2044e-0592-4a1c-a302-2f7716ef1bea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger_R",
                    "type": "Button",
                    "id": "2beeaaec-e07d-4642-a827-29cdf2a1d546",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_A",
                    "type": "Button",
                    "id": "e546faf1-e13b-47ee-bc6f-6bc764eb28aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_B",
                    "type": "Button",
                    "id": "fac30c31-b24b-434c-8959-aa35268f4778",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_Y",
                    "type": "Button",
                    "id": "5f207096-f335-490d-aa69-a0f106bb7e90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_X",
                    "type": "Button",
                    "id": "f0001864-82e0-4bc6-b4a9-f153911d772d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_up",
                    "type": "Button",
                    "id": "10c289f6-7c35-4ae7-8046-fd0f69b1d87b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_right",
                    "type": "Button",
                    "id": "4e7fba86-c1a7-488f-958a-a7341741e524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_left",
                    "type": "Button",
                    "id": "9decd8f3-1f90-4700-a183-0a4fd93493fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_down",
                    "type": "Button",
                    "id": "8a3f0686-024d-4c38-b34b-d4cfc7e184b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_L",
                    "type": "Button",
                    "id": "c293d7c3-aadb-4dfc-9950-d9546f524940",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button_R",
                    "type": "Button",
                    "id": "c6f7fcf2-ea28-45f4-b604-08ef0d34720a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stick_L_Press",
                    "type": "Button",
                    "id": "81cd61ff-22a7-4c2b-b543-0fce94675b7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stick_R_Press",
                    "type": "Button",
                    "id": "672a372d-69c4-4016-92d9-9a78b5d9248f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22ac7f79-6d21-48fc-a0be-9982975130cc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88126972-e924-4130-9612-67394012faf9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4adf668d-cdf4-43b0-b497-132e2c519705",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0663ef5-091f-4184-9375-157d5b1bdb4d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fe17ff6-fea3-4b46-ab74-d9372f287be1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3bb1280-630f-470d-9f03-c293d5e9b6c5",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f7423f3-c400-42e3-a3fe-d6023054330f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25964cf5-6c18-49c4-969f-a3f12c6caf1d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e6c7c2-b725-4b7f-b623-5c7396ffea04",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aee76cb-c853-432b-a048-bd4271d52aca",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a915531-3ae1-4d92-abbd-bced6e2ef245",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62e21baa-c312-494a-90a3-26ef792c9f24",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96c7b6a9-f832-400f-9afd-85e09666f313",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df3f7944-9a01-4db7-97d0-4ee8cdc29f45",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "313878ce-40a5-4ce4-b0f2-b68738d89c57",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick_L_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c72d0a3-1037-4260-8e2b-a1b3f48cf860",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick_R_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}